# Real-Estate_Project

./: .gitignore  MinIO_run.bat  PRODUCTION_FEATURES_GUIDE.md  README.md  deploy_production.bat  how HEAD
.github/: FUNDING.yml  copilot-instructions.md
src/pipelines/real-estate/: dev-requirements.txt  postgres_analytics.py  postgres_credentials.yaml  pyproject.toml  requirements.txt  sql_query_generator.py
src/pipelines/real-estate/realestate/: pipelines.py
src/pipelines/real-estate/realestate/common/: helper_functions.py  requests_scraping.py  solids_jupyter.py  solids_postgres_export.py  solids_spark_delta.py  types_realestate.py
src/pipelines/real-estate/realestate/config_environments/: local_base.yaml
src/pipelines/real-estate/realestate/config_pipelines/: scrape_realestate.yaml
src/pipelines/real-estate/realestate/notebooks/: TEST.ipynb  main_notebook.ipynb
